[package]
name = "leetcode-rust"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "LeetCode solutions implemented in Rust"

[dependencies]
# 常用的测试和调试工具
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

[dev-dependencies]
# 用于基准测试
criterion = "0.5"
